data/test/method_as_function/negative/3000.js
const axios = require('axios');
const id = 42
axios.put(`https://petstore.swagger.io/v2/pets/${id}`);